==> vermar/open-sensor-platform/embedded/common/modules/bus-drivers/STM32F4-CM4/i2c_driver.c <==
#include "common.h"
#include "i2c_driver.h"
#define I2C_TXRX_STATUS_ACTIVE                0
#define I2C_TXRX_STATUS_PASSED                1
#define I2C_TXRX_STATUS_FAILED                2
#define CR1_START_Set                         ((uint16_t)0x0100)
#define CR1_START_Reset                       ((uint16_t)0xFEFF)
#define CR1_STOP_Set                          ((uint16_t)0x0200)
#define CR1_STOP_Reset                        ((uint16_t)0xFDFF)
#define CR1_ACK_Set                           ((uint16_t)0x0400)
#define CR1_ACK_Reset                         ((uint16_t)0xFBFF)
#define I2C_STATUS_BIT_DUALF                  (0x0080)
#define I2C_STATUS_BIT_SMBHOST                (0x0040)
#define I2C_STATUS_BIT_SMBDEFAULT             (0x0020)
#define I2C_STATUS_BIT_GENCALL                (0x0010)
#define I2C_STATUS_BIT_TRA                    (0x0004)
#define I2C_STATUS_BIT_BUSY                   (0x0002)
#define I2C_STATUS_BIT_MASTER                 (0x0001)
#define I2C_STATUS_BIT_SMBALERT               (0x8000)
#define I2C_STATUS_BIT_TIMEOUT                (0x4000)
#define I2C_STATUS_BIT_PECERR                 (0x1000)
#define I2C_STATUS_BIT_OVR                    (0x0800)
#define I2C_STATUS_BIT_AF                     (0x0400)
#define I2C_STATUS_BIT_ARLO                   (0x0200)
#define I2C_STATUS_BIT_BERR                   (0x0100)
#define I2C_STATUS_BIT_TXE                    (0x0080)
#define I2C_STATUS_BIT_RXNE                   (0x0040)

static void I2C_HardwareSetup( void )
{
    GPIO_InitTypeDef  GPIO_InitStructure;

    /* Enable Clocks GPIOs used */
    RCC_GPIO_CLK_ENABLE( RCC_Periph_I2C_IF_BUS_GPIO ); //for I2C port GPIO

    /* GPIO Configuration for CLK and SDA signals */
    GPIO_InitStructure.Pin = I2C_IF_BUS_CLK_PIN  | I2C_IF_BUS_SDA_PIN;
    GPIO_InitStructure.Mode = GPIO_MODE_AF_OD;
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    GPIO_InitStructure.Speed = GPIO_SPEED_FAST;
    GPIO_InitStructure.Alternate  = I2C_IF_SCL_SDA_AF;
    HAL_GPIO_Init( I2C_IF_BUS_GPIO_GRP, &GPIO_InitStructure );

    /* Enable I2C Peripheral clock */
    I2C_IF_CLK_ENABLE();

    /* Force the I2C peripheral clock reset */
    I2C_IF_FORCE_RESET();

    /* Release the I2C peripheral clock reset */
    I2C_IF_RELEASE_RESET();

    /* NVIC/Interrupt config */
    /* Enable and set I2Cx Event Interrupt to the highest priority */
    HAL_NVIC_SetPriority(I2C_IF_BUS_EVENT_IRQ_CH, I2C_IF_BUS_INT_PREEMPT_PRIORITY, I2C_IF_BUS_EVENT_INT_SUB_PRIORITY);
    HAL_NVIC_EnableIRQ(I2C_IF_BUS_EVENT_IRQ_CH);

    /* Enable and set I2Cx Error Interrupt to the highest priority */
    HAL_NVIC_SetPriority(I2C_IF_BUS_ERROR_IRQ_CH, I2C_IF_BUS_INT_PREEMPT_PRIORITY, I2C_IF_BUS_ERROR_INT_SUB_PRIORITY);
    HAL_NVIC_EnableIRQ(I2C_IF_BUS_ERROR_IRQ_CH); 
}

void I2C_Master_Initialise( I2C_TypeDef *busId )
{
    if(HAL_I2C_GetState(&_I2cHandle) == HAL_I2C_STATE_RESET)
    {
        /* DISCOVERY_I2Cx peripheral configuration */
        _I2cHandle.Init.ClockSpeed = I2C_IF_BUS_CLOCK;
        _I2cHandle.Init.DutyCycle = I2C_DUTYCYCLE_2;
        _I2cHandle.Init.OwnAddress1 = 0x33;
        _I2cHandle.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
        _I2cHandle.Instance = busId;

        /* Init the I2C */
        I2C_HardwareSetup();
        HAL_I2C_Init(&_I2cHandle);
    }

    _AsyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_PASSED;     //initialize last comm status
    /* Note: I2C bus event and error interrupts are enabled when tx is started */
}

uint8_t I2C_Start_Transfer( uint8_t slaveAddr, uint16_t regAddr, uint8_t *pData, uint16_t dataSize, I2C_SendMode_t sendMode )
{
    /* Check that no transfer is already pending*/
    if (_AsyncXfer.i2c_txrx_status == I2C_TXRX_STATUS_ACTIVE)
    {

        D0_printf("I2C_Start_Transfer: A transfer is already pending\n\r");
        return I2C_ERR_BUSY;
    }

    if ((sendMode == I2C_MASTER_READ) || (sendMode == I2C_MASTER_WRITE))
    {
        /* Update the transfer descriptor */
        _AsyncXfer.i2c_slave_addr  = (slaveAddr << 1);
        _AsyncXfer.i2c_slave_reg   = regAddr;
        _AsyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_ACTIVE;
        _AsyncXfer.pData           = pData;
        _AsyncXfer.num             = dataSize;
        _AsyncXfer.byte_index      = 0;
        _AsyncXfer.i2c_txrx_phase  = 0;
        _SendMode = sendMode;
        /* Enable interrupts and clear flags */
        __HAL_I2C_ENABLE_IT( &_I2cHandle, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR );
        __HAL_I2C_CLEAR_FLAG( &_I2cHandle, I2C_FLAG_SMBALERT | I2C_FLAG_TIMEOUT | I2C_FLAG_PECERR | I2C_FLAG_OVR
            | I2C_FLAG_AF | I2C_FLAG_ARLO | I2C_FLAG_BERR );

        /* Enable ACK as it is disabled in interrupt handler after each transaction */
        _I2cHandle.Instance->CR1 |= CR1_ACK_Set;

        /* Generate Start */
        _I2cHandle.Instance->CR1 |= I2C_CR1_START;
    }
    else
    {
        return I2C_ERR_REQ;
    }
    return I2C_ERR_OK;
}

void I2C_Driver_ISR_Handler(void)
{

    __IO uint32_t SR1Register = 0;
    __IO uint32_t SR2Register = 0;

    /* Read the I2C SR1 and SR2 status registers */
    SR1Register = _I2cHandle.Instance->SR1;
    SR2Register = _I2cHandle.Instance->SR2;

    /* If SB = 1, I2C master sent a START on the bus (EV5) or ReSTART in case of receive */
    if ((SR1Register & I2C_MASK_SB) == I2C_STATUS_BIT_SB)
    {
        /* Send the slave address for transmssion or for reception (according to the configured value
            in the write master write routine */
        if (_SendMode == I2C_MASTER_RESTART)
        {
            _I2cHandle.Instance->DR = _AsyncXfer.i2c_slave_addr | 0x01; //Set read bit
            //After this we just wait for RXNE interrupts to read data
        }
        else
        {
            _I2cHandle.Instance->DR = _AsyncXfer.i2c_slave_addr;
            //I2C_msgSize--;
        }
        SR1Register = 0;
        SR2Register = 0;
    }

    //if ((SR2Register & I2C_MASK_MSL) == I2C_STATUS_BIT_MASTER)
    {
        /* If ADDR = 1, EV6 */
        if ((SR1Register & I2C_MASK_ADDR) == I2C_STATUS_BIT_ADDR)
        {
            if (_SendMode != I2C_MASTER_RESTART)
            {
                /* Write the device register address */
                _I2cHandle.Instance->DR = _AsyncXfer.i2c_slave_reg;
                //I2C_msgSize--;

                /* If this is receive mode then program start bit here so that repeat start will be generated as soon as
                ACK is received */
                if (_SendMode == I2C_MASTER_READ)
                {
                    _SendMode = I2C_MASTER_RESTART;
                    _I2cHandle.Instance->CR1 |= CR1_START_Set;
                }
                /* If no further data to be sent, disable the I2C BUF IT
                in order to not have a TxE  interrupt */
                if (_AsyncXfer.num == 0)
                {
                    _I2cHandle.Instance->CR2 &= (uint16_t)~I2C_IT_BUF; //This will ensure interrupt only when BTF is set (EV8_2)
                }
            }
            else if (_AsyncXfer.num == 1)
            {
                /* Clear ACK */
                _I2cHandle.Instance->CR1 &= CR1_ACK_Reset;
                /* Program the STOP */
                _I2cHandle.Instance->CR1 |= CR1_STOP_Set;
            }

            SR1Register = 0;
            SR2Register = 0;

        }

        /* Master transmits the remaing data: from data2 until the last one.  */
        /* If TXE is set (EV_8) */
        if ((SR1Register & I2C_MASK_TXE_BTF) == I2C_STATUS_BIT_TXE)
        {
            if (_SendMode == I2C_MASTER_WRITE)
            {
                /* If there is still data to write */
                if (_AsyncXfer.num != 0)
                {
                    /* Write the data in DR register */
                    _I2cHandle.Instance->DR = _AsyncXfer.pData[_AsyncXfer.byte_index++];
                    /* Decrment the number of data to be written */
                    _AsyncXfer.num--;
                    /* If  no data remains to write, disable the BUF IT in order
                    to not have again a TxE interrupt. */
                    if (_AsyncXfer.num == 0)
                    {
                        /* Disable the BUF IT */
                        _I2cHandle.Instance->CR2 &= (uint16_t)~I2C_IT_BUF; //This ensures BTF interrupt (EV8_2)
                    }
                }

            }

            SR1Register = 0;
            SR2Register = 0;
        }

        /* If BTF and TXE are set (EV8_2), program the STOP */
        if ((SR1Register & I2C_MASK_TXE_BTF) == (I2C_STATUS_BIT_TXE | I2C_STATUS_BIT_BTF))
        {
            if (_SendMode == I2C_MASTER_WRITE)
            {
                /* Program the STOP */
                _I2cHandle.Instance->CR1 |= CR1_STOP_Set;
                /* Disable EVT IT In order to not have again a BTF IT */
                _I2cHandle.Instance->CR2 &= (uint16_t)~I2C_IT_EVT;
                _AsyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_PASSED;
                osSignalSet( asfTaskHandleTable[I2C_DRIVER_TASK].handle, I2C_TXRX_STATUS_PASSED );
                //isr_evt_set(I2C_TXRX_STATUS_PASSED, asfTaskHandleTable[I2C_DRIVER_TASK].handle );
            }
            SR1Register = 0;
            SR2Register = 0;

        }

        /* If RXNE is set */
        if ((SR1Register & I2C_MASK_RXNE) == I2C_STATUS_BIT_RXNE)
        {
            if (_AsyncXfer.num == 0) //received all expected data
            {
                /* Disable the BUF IT */
                _I2cHandle.Instance->CR2 &= (uint16_t)~I2C_IT_BUF;
                /* Indicate that we are done receiving */
                _AsyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_PASSED;
                osSignalSet( asfTaskHandleTable[I2C_DRIVER_TASK].handle, I2C_TXRX_STATUS_PASSED );
                //isr_evt_set(I2C_TXRX_STATUS_PASSED, asfTaskHandleTable[I2C_DRIVER_TASK].handle );
            }
            else
            {
                /* Read the data register */
                _AsyncXfer.pData[_AsyncXfer.byte_index++] = _I2cHandle.Instance->DR;
                /* Decrement the number of bytes to be read */
                _AsyncXfer.num--;

                /* If it remains only one byte to read, disable ACK and program the STOP (EV7_1) */
                if (_AsyncXfer.num == 1)
                {
                    /* Clear ACK */
                    _I2cHandle.Instance->CR1 &= CR1_ACK_Reset;
                    /* Program the STOP */
                    _I2cHandle.Instance->CR1 |= CR1_STOP_Set;
                }

                if (_AsyncXfer.num == 0) //received all expected data
                {
                    /* Disable the BUF IT */
                    _I2cHandle.Instance->CR2 &= (uint16_t)~I2C_IT_BUF;
                    /* Indicate that we are done receiving */
                    _AsyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_PASSED;
                    osSignalSet( asfTaskHandleTable[I2C_DRIVER_TASK].handle, I2C_TXRX_STATUS_PASSED );
                    //isr_evt_set(I2C_TXRX_STATUS_PASSED, asfTaskHandleTable[I2C_DRIVER_TASK].handle );
                }
            }

            SR1Register = 0;
            SR2Register = 0;
        }
    }
}

void I2C_Driver_ERR_ISR_Handler(void)
{
    __IO uint32_t SR1Register = 0;

    /* Read the I2C1 status register */
    SR1Register = _I2cHandle.Instance->SR1;

    /* If AF = 1 */
    if ((SR1Register & I2C_MASK_AF) == I2C_STATUS_BIT_AF)
    {
        _I2cHandle.Instance->SR1 &= (~I2C_STATUS_BIT_AF);
        SR1Register = 0;
    }
    /* If ARLO = 1 */
    if ((SR1Register & I2C_MASK_ARLO) == I2C_STATUS_BIT_ARLO)
    {
        _I2cHandle.Instance->SR1 &= (~I2C_STATUS_BIT_ARLO);
        SR1Register = 0;
    }
    /* If BERR = 1 */
    if ((SR1Register & I2C_MASK_BERR) == I2C_STATUS_BIT_BERR)
    {
        _I2cHandle.Instance->SR1 &= (~I2C_STATUS_BIT_BERR);
        SR1Register = 0;
    }

    /* If OVR = 1 */
    if ((SR1Register & I2C_MASK_OVR) == I2C_STATUS_BIT_OVR)
    {
        _I2cHandle.Instance->SR1 &= (~I2C_STATUS_BIT_OVR);
        SR1Register = 0;
    }
    _AsyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_FAILED;
    osSignalSet( asfTaskHandleTable[I2C_DRIVER_TASK].handle, I2C_TXRX_STATUS_FAILED );
    //isr_evt_set(I2C_TXRX_STATUS_FAILED, asfTaskHandleTable[I2C_DRIVER_TASK].handle );
}
